# task8-llvm

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/classroom/: autograding.json
.github/workflows/: classroom.yml
tasks/: .gitignore
tasks/dead-code-elimination/: CMakeLists.txt  DeadCodeElimination.cpp  Makefile
tasks/memory-safety/: CMakeLists.txt  Cargo.toml  Makefile  MemorySafety.cpp  MemorySafetyRuntime.c  MemorySafetyRuntime.cpp
tasks/memory-safety/src/: lib.rs
tests/: shell.nix
tests/dce/: Makefile  lit.cfg  llvm-lit.py  test-1.ll  test-2.ll  test-3.ll
tests/memory-safety/: Makefile  input-2.txt  malloc.c  performance.c  stack.c  test-malloc.py  test-performance.py  test-stack.py  test-use-after-free.py  testsupport.py  use-after-free.c
