[package]
name = "memory_safety_runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
lazy_static = "1.4.0"
nix = "0.27.1"
parking_lot = "0.12.1"

